--- a/src/app/cart/cart-user/cart-user.component.css
+++ b/src/app/cart/cart-user/cart-user.component.css
@@ -12,7 +12,15 @@
   background-color: #f56043;
   border: #f56043;
 }
-
+.row{
+  margin-bottom: 20px;
+}
+.bg-image{
+  box-shadow: 5px 5px 5px #ddd;
+}
+.bg-image-img{
+  border-radius: 5px;
+}
 .user-acc-admin{
   margin-right: 15px;
   color: #ee4d2d;
@@ -181,3 +189,101 @@
 .card-body-noimage{
   margin-left: 190px;
 }
+
+
+/*footer*/
+.now-container-coporation {
+  background-color: #fff;
+  box-shadow: 0 2px 2px 0 rgba(50, 50, 50, .1);
+  -moz-box-shadow: 0 2px 2px 0 rgba(50, 50, 50, .1);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(50, 50, 50, .1);
+  padding: 20px 150px 50px;
+  border-radius: 4px;
+  margin-top: 60px;
+  position: relative
+}
+
+.now-container-coporation.img-right {
+  padding: 50px 350px 50px 150px
+}
+
+.now-container-coporation .title {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 10px
+}
+
+.now-container-coporation .bg-corporation {
+  position: absolute;
+  bottom: -1px;
+  right: 0;
+  z-index: 2;
+  line-height: 0;
+  text-align: center;
+  width: 350px
+}
+
+
+.seo-footer-link {
+  margin: 50px 0
+}
+
+.seo-footer-link__head {
+  color: rgba(0, 0, 0, .54);
+  font-weight: 700;
+  text-transform: uppercase
+}
+
+.seo-footer-link__body {
+  column-count: 4
+}
+
+.seo-footer-link__item {
+  padding-right: 10px;
+  break-inside: avoid
+}
+.seo-footer-link__item a{
+  text-decoration: none;
+}
+
+.seo-footer-link__title {
+  font-weight: 700;
+  margin: 0 0 .125rem;
+  padding: .125rem 0;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, .54);
+  font-size: 13px
+}
+
+.seo-footer-link__title:hover {
+  color: #0288d1
+}
+
+.seo-footer-link__sub-item-wrapper {
+  list-style-type: none;
+  padding: 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap
+}
+
+.seo-footer-link__sub-item {
+  font-size: 13px;
+  color: rgba(0, 0, 0, .54)
+}
+
+.seo-footer-link__sub-item:after {
+  content: "|";
+  color: rgba(0, 0, 0, .54) !important;
+  padding: 0 3px
+}
+
+.seo-footer-link__sub-item:last-child:after {
+  content: ""
+}
+
+.seo-footer-link__sub-item:hover {
+  color: #0288d1
+}
+/*footer*/
