--- a/src/app/cart/cart-user/cart-user.component.html
+++ b/src/app/cart/cart-user/cart-user.component.html
@@ -172,7 +172,7 @@
       <div class="col-md-8">
         <div class="card mb-4">
           <div class="card-header py-3">
-            <h5 class="mb-0">Cart - 2 items</h5>
+            <h5 class="mb-0">Sản phẩm</h5>
           </div>
           <div class="card-body">
             <div *ngIf="messagecart === 'khong co du lieu'; then thenBlockCart else elseBlockACart"></div>
@@ -187,7 +187,7 @@
                     <!-- Image -->
                     <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
                       <img src="{{product.product.image}}"
-                           class="w-100" alt="Blue Jeans Jacket" />
+                           class="w-100 bg-image-img" alt="Blue Jeans Jacket" />
                       <a href="#!">
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
                       </a>
@@ -269,33 +269,33 @@
       <div class="col-md-4">
         <div class="card mb-4">
           <div class="card-header py-3">
-            <h5 class="mb-0">Summary</h5>
+            <h5 class="mb-0">Bảng tóm tắt</h5>
           </div>
           <div class="card-body">
             <ul class="list-group list-group-flush">
               <li
                 class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                Products
-                <span>53.980.980 đ</span>
+                Sản phẩm
+                <span>{{totalPrice}} đ</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                Shipping
-                <span>Gratis</span>
+                Vận chuyển
+                <span>ShopbeaShip</span>
               </li>
               <li
                 class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                 <div>
-                  <strong>Total amount</strong>
+                  <strong>Tổng tiền</strong>
                   <strong>
-                    <p class="mb-0">(including VAT)</p>
+                    <p class="mb-0">(đã thêm VAT)</p>
                   </strong>
                 </div>
-                <span><strong>53.980.980 đ</strong></span>
+                <span><strong>{{totalPrice}} đ</strong></span>
               </li>
             </ul>
 
             <button type="button" class="btn btn-primary btn-lg btn-block">
-              Go to checkout
+              Đặt hàng
             </button>
           </div>
         </div>
@@ -303,3 +303,112 @@
     </div>
   </div>
 </section>
+
+
+<div class="now-container-coporation" >
+  <p class="seo-footer-link__head">Danh mục</p>
+  <div class="seo-footer-link__body">
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Thuốc</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-hoa-my-pham-giao-tan-noi"
+        class="seo-footer-link__sub-item">Hoá mỹ phẩm</a><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-bcs-giao-tan-noi"
+        class="seo-footer-link__sub-item">BCS</a><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-thiet-bi-giao-tan-noi"
+        class="seo-footer-link__sub-item">Thiết bị</a><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-thuoc-tay-giao-tan-noi"
+        class="seo-footer-link__sub-item">Thuốc tây</a><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-khau-trang-giao-tan-noi"
+        class="seo-footer-link__sub-item">Khẩu trang</a><a
+        href="https://shopeefood.vn/ha-noi/medicine/danh-sach-dia-diem-phuc-vu-khan-cap-giao-tan-noi"
+        class="seo-footer-link__sub-item">Khẩn cấp</a></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Thú cưng</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"><a
+        href="#"
+        class="seo-footer-link__sub-item">Thú cưng</a></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Đồ ăn HN</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"><a
+        href="#"
+        class="seo-footer-link__sub-item">Đồ ăn HN</a></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Đặt bàn HN</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Thực phẩm HN</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Sản phẩm HN</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="#">
+      <p class="seo-footer-link__title">Sản phẩm</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"><a
+        href="#"
+        class="seo-footer-link__sub-item">Mỹ phẩm</a><a
+        href="#"
+        class="seo-footer-link__sub-item">Đồ chơi</a><a
+        href="#"
+        class="seo-footer-link__sub-item">Sữa</a><a
+        href="#"
+        class="seo-footer-link__sub-item">Tã bỉm</a><a
+        href="#"
+        class="seo-footer-link__sub-item">Dụng cụ</a><a
+        href="#"
+        class="seo-footer-link__sub-item">Quần áo</a><a
+        href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-giay-dep-giao-tan-noi"
+        class="seo-footer-link__sub-item">Giày dép</a><a
+        href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-dien-tu-giao-tan-noi"
+        class="seo-footer-link__sub-item">Điện tử</a><a
+        href="https://shopeefood.vn/ha-noi/fmcg/danh-sach-dia-diem-phuc-vu-trang-suc-giao-tan-noi"
+        class="seo-footer-link__sub-item">Trang sức</a></ul>
+    </div>
+    <div class="seo-footer-link__item"><a href="https://shopeefood.vn/ha-noi/flowers">
+      <p class="seo-footer-link__title">Hoa</p>
+    </a>
+      <ul class="seo-footer-link__sub-item-wrapper"><a
+        href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-chia-buon-giao-tan-noi"
+        class="seo-footer-link__sub-item">Chia buồn</a><a
+        href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-cay-canh-giao-tan-noi"
+        class="seo-footer-link__sub-item">Cây cảnh</a><a
+        href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-chuc-mung-giao-tan-noi"
+        class="seo-footer-link__sub-item">Chúc mừng</a><a
+        href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-sinh-nhat-giao-tan-noi"
+        class="seo-footer-link__sub-item">Sinh nhật</a><a
+        href="https://shopeefood.vn/ha-noi/flowers/danh-sach-dia-diem-phuc-vu-tinh-yeu-giao-tan-noi"
+        class="seo-footer-link__sub-item">Tình yêu</a></ul>
+    </div>
+  </div>
+</div>
+<div class="now-container-coporation" style="margin-top: 0px;">
+  <div class="container-inner">
+
+    <div class="block-last">
+      <p class="title-block">Địa chỉ công ty</p>
+      <span>
+                                <p>Công Ty Cổ Phần Foody</p>
+                                <p>Lầu G, Tòa nhà Jabes 1,</p>
+                                <p>số 244 đường Cống Quỳnh, phường Phạm Ngũ Lão, Quận 1, TPHCM</p>
+                                <p>Giấy CN ĐKDN số: 0311828036</p>
+                                <p>do Sở Kế hoạch và Đầu tư TP.HCM cấp ngày 11/6/2012,</p>
+                                <p>sửa đổi lần thứ 23, ngày 10/12/2020</p>
+                                <p>Số điện thoại: 1900 2042</p>
+                                <p>Email: <a href="mailto:support@shopeefood.vn"> support@shopeefood.vn</a></p>
+                            </span>
+    </div>
+  </div>
+</div>
