--- a/src/app/admin/adminpage/adminpage.component.html
+++ b/src/app/admin/adminpage/adminpage.component.html
@@ -181,7 +181,7 @@
             </a>
           </li>
           <li class="nav-item " >
-            <a class="nav-link nav-item-hover" routerLink="merchant-list/active" routerLinkActive="selected">
+            <a class="nav-link nav-item-hover" routerLink="merchant-list" routerLinkActive="selected">
               <span data-feather="file" class="align-text-bottom"></span>
               Quản lý nguời bán
             </a>
