--- a/src/app/admin/merchant-list-block/merchant-list-block.component.html
+++ b/src/app/admin/merchant-list-block/merchant-list-block.component.html
@@ -8,7 +8,7 @@
       <th scope="col">Điện thoại</th>
       <th scope="col">Địa chỉ</th>
       <th scope="col" >Thời gian</th>
-      <th scope="col" colspan="2">Khóa</th>
+      <th scope="col" colspan="2">Mở Khóa</th>
     </tr>
     </thead>
     <tbody>
