--- a/src/app/homepage/user-info/user-info.component.html
+++ b/src/app/homepage/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-<header class="main-header">
+<header class="main-header" *ngIf="account">
 
   <div class="container-header">
     <div class="container">
