--- a/src/app/homepage/merchant-detail/merchant-detail.component.html
+++ b/src/app/homepage/merchant-detail/merchant-detail.component.html
@@ -1,6 +1,6 @@
 <div class="now-detail-restaurant clearfix">
-  <div *ngIf="merchant"></div>
-  <ng-template class="container">
+
+  <div class="container">
     <div class="detail-restaurant-img"><img
       src="{{merchant.avatar}}"
       alt="Dồi Sụn Nướng &amp; Ăn Vặt - Shop Online" class=""></div>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>
-  </ng-template>
+  </div>
 </div>
 
 
