--- a/src/app/merchant/dashboard/dashboard.component.html
+++ b/src/app/merchant/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<div class="container-fluid m-md-5">
+<div style="width: 1100px;height: 1100px;">
+  <canvas id="myChart"></canvas>
+</div></div>
