--- a/src/app/admin/merchant-list/merchant-list.component.html
+++ b/src/app/admin/merchant-list/merchant-list.component.html
@@ -29,13 +29,13 @@
       <thead>
       <tr>
         <th scope="col">id</th>
-        <th scope="col">Avatar</th>
-        <th scope="col">Name</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Address</th>
-        <th scope="col">OpenTime</th>
-        <th scope="col">CloseTime</th>
-        <th scope="col" colspan="2">Action</th>
+        <th scope="col">Ảnh</th>
+        <th scope="col">Tên</th>
+        <th scope="col">Điện thoại</th>
+        <th scope="col">Địa chỉ</th>
+        <th scope="col">Thời gian</th>
+<!--        <th scope="col">CloseTime</th>-->
+        <th scope="col" colspan="2">Khóa</th>
       </tr>
       </thead>
       <tbody>
@@ -47,10 +47,9 @@
         <td class="merchant-item">{{merchant.name}}</td>
         <td class="merchant-item">{{merchant.phone}}</td>
         <td class="merchant-item">{{merchant.address}}</td>
-        <td class="merchant-item">{{merchant.openTime}}</td>
-        <td class="merchant-item">{{merchant.closeTime}}</td>
-        <td class="action-icon"><a href="#"><i class="fa-regular fa-pen-to-square"></i></a></td>
-        <td class="action-icon"><a href="#"><i class="fa-solid fa-trash"></i></a></td>
+        <td class="merchant-item" size="50px">Mở:{{merchant.openTime}}  Đóng:{{merchant.closeTime}}</td>
+        <!--      <td class="merchant-item">{{merchant.closeTime}}</td>-->
+        <td class="action-icon"><a (click)="blockMerchant(merchant.id,merchant)"><i class="fa-regular fas fa-lock"></i></a></td>
       </tr>
 
       </tbody>
