--- a/src/app/merchant/dashboard/dashboard.component.html
+++ b/src/app/merchant/dashboard/dashboard.component.html
@@ -1,4 +1,23 @@
 <div class="container-fluid m-md-5">
-<div style="width: 1100px;height: 1100px;">
-  <canvas id="myChart"></canvas>
-</div></div>
+  <div>
+
+  <h6>Color</h6>
+  <input type="color" class="form-control-color" #element (input)="setColor(element.value)"/>
+  <div>
+  <h6>Type</h6>
+  <div *ngIf="type!=='bar'; then thenBlock else elseBlock"></div>
+
+<ng-template #thenBlock>
+  <button class="btn btn-danger " (click)="setType()">bar</button>
+</ng-template>
+  <ng-template #elseBlock>
+    <button class="btn btn-danger" (click)="convert()">Rada</button>
+  </ng-template>
+</div>
+</div>
+
+  <div style="width: 1100px;height: 1100px;">
+    <canvas id="myChart"></canvas>
+  </div>
+</div>
+
