--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -205,7 +205,7 @@
         <div class="form-login-input">
           <div class="field-group">
             <div class="input-group"><i class="far fa-envelope"></i><input class="input100" id="userName" type="text" name="userName" placeholder="Tên đăng nhập"
-                                                                           formControlName="userName">
+                                                                           formControlName="userName" [(ngModel)]="nameD">
              <span style="color: red"> {{message}}</span>
 <!--valid user-->
             <div *ngIf="!username?.valid && username?.touched">
@@ -214,7 +214,7 @@
               </div>
             </div>
 
-            <div class="input-group"><i class="fas fa-lock"></i><input class="input100" type="password" name="password" placeholder="Mật khẩu" formControlName="password"></div>
+            <div class="input-group"><i class="fas fa-lock"></i><input class="input100" type="password" name="password" placeholder="Mật khẩu" formControlName="password" [(ngModel)]="passD" ></div>
 <!--              valid-->
               <div *ngIf="!password?.valid && password?.touched">
                 <div [hidden]="!password?.errors?.['required']">
@@ -234,7 +234,7 @@
             <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu
               thông tin đăng nhập</label></div><span class="float-right"><a routerLink="/forgotPassword">Quên mật
                                     khẩu?</a></span>
-          </div><button class="btn btn-block btn-submit">Đăng nhập</button>
+          </div><button class="btn btn-block btn-submit" [disabled]="disable">Đăng nhập</button>
 
           <a routerLink="/register" class="btn btn-block btn-dark">Đăng ký</a>
         </div><br>
