--- a/src/app/account/register-merchant/register-merchant.component.html
+++ b/src/app/account/register-merchant/register-merchant.component.html
@@ -97,8 +97,8 @@
               cưng</a></div>
 
             <div class="user-acc col-auto">
-              <button type="button" class="btn btn-none-bg btn-login">
-                <span routerLink="/login" class="font14">Đăng nhập</span>
+              <button routerLink="/login" type="button" class="btn btn-none-bg btn-login">
+                <span  class="font14">Đăng nhập</span>
               </button>
             </div>
           </div>
