--- a/src/app/admin/user-list-block/user-list-block.component.html
+++ b/src/app/admin/user-list-block/user-list-block.component.html
@@ -2,7 +2,7 @@
   <table class="table table-striped table-sm">
     <thead>
     <tr>
-      <th scope="col">id</th>
+      <th scope="col">Stt</th>
       <th scope="col">Ảnh</th>
       <th scope="col">Tên</th>
       <th scope="col">Điện thoại</th>
@@ -12,8 +12,8 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let user of users">
-      <td>{{user.id}}</td>
+    <tr *ngFor="let user of users;index as i">
+      <td>{{i+1}}</td>
       <td><img src="{{user.avatar}}" alt="" style="height: 40px;
     width: 40px;
     border-radius: 50%;"></td>
