--- a/src/app/homepage/user-info/user-info.component.html
+++ b/src/app/homepage/user-info/user-info.component.html
@@ -23,17 +23,21 @@
         <div class="user-acc col-auto user-acc-wr">
           <div *ngIf="message === 'chua dang nhap'; then thenBlockAcc else elseBlockAcc"></div>
           <ng-template #thenBlockAcc>
-            <a routerLink="/login"><button type="button"  class="btn btn-none-bg btn-login">
-              <span class="font14">Đăng nhập</span>
-            </button></a>
+            <a routerLink="/login">
+              <button type="button" class="btn btn-none-bg btn-login">
+                <span class="font14">Đăng nhập</span>
+              </button>
+            </a>
           </ng-template>
 
           <ng-template #elseBlockAcc>
             <div class="user-acc-contain">
               <img class="user-acc-img" [src]="account.user.avatar" alt="">
               <span>{{account.user.name}}</span>
-              <div class="user-acc-dropdown">
+              <div class="user-acc-dropdown"><a class="user-acc-admin" routerLink="/register/merchant"><i
+                class="fa-solid fa-user-plus"></i> Đăng ký người bán</a>
                 <span (click)="logout()"><i class="fa-solid fa-right-to-bracket"></i> Đăng xuất</span>
+
               </div>
             </div>
           </ng-template>
@@ -128,46 +132,44 @@
 </header>
 
 
-
-
 <div class="now-container-coporation now-container-content">
   <div class="row">
-<!--    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">-->
-<!--      <div class="position-sticky pt-3 sidebar-sticky">-->
-<!--        <ul class="nav flex-column">-->
-<!--          <li class="nav-item" >-->
-<!--            <a class="nav-link active" aria-current="page" routerLink="merchant-dashboard" routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">-->
-<!--              <span data-feather="home" class="align-text-bottom"></span>-->
-<!--              Dashboard-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="nav-item " >-->
-<!--            <a class="nav-link nav-item-hover" routerLink="merchant-order" routerLinkActive="selected">-->
-<!--              <span data-feather="file" class="align-text-bottom"></span>-->
-<!--              Quản lý đơn hàng-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="nav-item " >-->
-<!--            <a class="nav-link nav-item-hover" routerLink="product-list" routerLinkActive="selected">-->
-<!--              <span data-feather="shopping-cart" class="align-text-bottom"></span>-->
-<!--              Quản lý sản phẩm-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="nav-item " >-->
-<!--            <a class="nav-link nav-item-hover" routerLink="merchant-transport" routerLinkActive="selected">-->
-<!--              <span data-feather="users" class="align-text-bottom"></span>-->
-<!--              Quản lý đơn vị vận chuyển-->
-<!--            </a>-->
-<!--          </li>-->
-<!--          <li class="nav-item " >-->
-<!--            <a class="nav-link nav-item-hover" routerLink="merchant-info" routerLinkActive="selected">-->
-<!--              <span data-feather="users" class="align-text-bottom"></span>-->
-<!--              Thiết lập Shop-->
-<!--            </a>-->
-<!--          </li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--    </nav>-->
+    <!--    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">-->
+    <!--      <div class="position-sticky pt-3 sidebar-sticky">-->
+    <!--        <ul class="nav flex-column">-->
+    <!--          <li class="nav-item" >-->
+    <!--            <a class="nav-link active" aria-current="page" routerLink="merchant-dashboard" routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">-->
+    <!--              <span data-feather="home" class="align-text-bottom"></span>-->
+    <!--              Dashboard-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--          <li class="nav-item " >-->
+    <!--            <a class="nav-link nav-item-hover" routerLink="merchant-order" routerLinkActive="selected">-->
+    <!--              <span data-feather="file" class="align-text-bottom"></span>-->
+    <!--              Quản lý đơn hàng-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--          <li class="nav-item " >-->
+    <!--            <a class="nav-link nav-item-hover" routerLink="product-list" routerLinkActive="selected">-->
+    <!--              <span data-feather="shopping-cart" class="align-text-bottom"></span>-->
+    <!--              Quản lý sản phẩm-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--          <li class="nav-item " >-->
+    <!--            <a class="nav-link nav-item-hover" routerLink="merchant-transport" routerLinkActive="selected">-->
+    <!--              <span data-feather="users" class="align-text-bottom"></span>-->
+    <!--              Quản lý đơn vị vận chuyển-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--          <li class="nav-item " >-->
+    <!--            <a class="nav-link nav-item-hover" routerLink="merchant-info" routerLinkActive="selected">-->
+    <!--              <span data-feather="users" class="align-text-bottom"></span>-->
+    <!--              Thiết lập Shop-->
+    <!--            </a>-->
+    <!--          </li>-->
+    <!--        </ul>-->
+    <!--      </div>-->
+    <!--    </nav>-->
 
     <!--    <app-merchant-list class="col-md-9 ms-sm-auto col-lg-10 px-md-4"></app-merchant-list>-->
     <div class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
@@ -192,7 +194,7 @@
       <!--        <app-product-create></app-product-create>-->
       <!--      </ng-template>-->
 
-<div *ngIf="account">
+      <div *ngIf="account">
         <div class="container-fluid m-md-5 border">
 
           <div class="row">
@@ -215,13 +217,16 @@
                       <div class="account-profile">
                         <div class="account-profile-item">
                           <label for="image">
-                            <img [src]="imgSrc" class="account-profile-avatar" >
+                            <img [src]="imgSrc" class="account-profile-avatar">
                           </label>
 
-                          <input type="file" id="image" hidden [disabled]="disabeled" (change)="showPreview($event)" (change)="showimg()" >
-                          <input class="account-profile-text" style="margin-left: 8px;" [disabled]="disabeled" [(ngModel)]="account.user.name" value="{{account.user.name}}">
+                          <input type="file" id="image" hidden [disabled]="disabeled" (change)="showPreview($event)"
+                                 (change)="showimg()">
+                          <input class="account-profile-text" style="margin-left: 8px;" [disabled]="disabeled"
+                                 [(ngModel)]="account.user.name" value="{{account.user.name}}">
 
-                          <div> <img [src]="imgSrc" class="img" height="125" width="100" alt="Img" style='display:{{show}}'><br></div>
+                          <div><img [src]="imgSrc" class="img" height="125" width="100" alt="Img"
+                                    style='display:{{show}}'><br></div>
 
                         </div>
                       </div>
@@ -232,7 +237,6 @@
                     </div>
                   </div>
                 </div>
-
 
 
                 <div class="setting-card-row desc">
@@ -247,7 +251,8 @@
                       <div class="title">Số điện thoại</div>
                     </div>
                     <div class="info">
-                      <input class="info-input" [disabled]="disabeled" [(ngModel)]="account.user.phone" value="{{account.user.phone}}">
+                      <input class="info-input" [disabled]="disabeled" [(ngModel)]="account.user.phone"
+                             value="{{account.user.phone}}">
                     </div>
                   </div>
                 </div>
@@ -263,7 +268,8 @@
                       <div class="title">Email</div>
                     </div>
                     <div class="info">
-                      <input class="info-input" [disabled]="disabeled" [(ngModel)]="account.email" value="{{account.email}}">
+                      <input class="info-input" [disabled]="disabeled" [(ngModel)]="account.email"
+                             value="{{account.email}}">
                     </div>
                   </div>
                 </div>
@@ -279,7 +285,8 @@
                       <div class="title">Mật khẩu đăng nhập</div>
                     </div>
                     <div class="info">
-                      <input class="info-input subtitle" [disabled]="disabeled" [(ngModel)]="account.password" value="{{account.password}}">
+                      <input class="info-input subtitle" [disabled]="disabeled" [(ngModel)]="account.password"
+                             value="{{account.password}}">
                     </div>
                   </div>
                 </div>
@@ -308,18 +315,19 @@
             <button [disabled]="!disabeled" type="button" class="right-button" (click)="showFormUpdate()">
               <span>Cập nhật</span>
             </button>
-            <button [disabled]="disabeled||adisabeled"  type="button" class="right-button-2" (click)="updateUserInfo()">
+            <button [disabled]="disabeled||adisabeled" type="button" class="right-button-2" (click)="updateUserInfo()">
               <span>Lưu</span>
-            </button></div>
+            </button>
+          </div>
         </div>
 
+      </div>
     </div>
   </div>
 </div>
-</div>
 
 
-<div class="now-container-coporation" >
+<div class="now-container-coporation">
   <p class="seo-footer-link__head">Danh mục</p>
   <div class="seo-footer-link__body">
     <div class="seo-footer-link__item"><a href="#">
@@ -468,7 +476,6 @@
 <!--              <div class="user-acc-dropdown">-->
 <!--                <span (click)="logout()"><i class="fa-solid fa-right-to-bracket"></i> Đăng xuất</span>-->
 <!--              </div>-->
-
 
 
 <!--            </div>-->
