--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -232,7 +232,7 @@
 
           <div class="form-group clearfix">
             <div class="float-left"><input type="checkbox" id="RememberMe" checked=""><label for="RememberMe">Lưu
-              thông tin đăng nhập</label></div><span class="float-right"><a routerLink="/forgotPassword">Quên mật
+              thông tin đăng nhập</label></div><span class="float-right"><a routerLink="/forgotpass">Quên mật
                                     khẩu?</a></span>
           </div><button class="btn btn-block btn-submit" [disabled]="disable">Đăng nhập</button>
 
