--- a/src/app/homepage/home/home.component.html
+++ b/src/app/homepage/home/home.component.html
@@ -324,10 +324,10 @@
               <div class="local">có 37422 địa điểm ở Hà Nội từ 00:00 - 23:59</div>
             </div>
             <div class="form-search">
-              <div class="input-group"><input style="color: black;" type="text" id="txtSearchHome"
-                                              placeholder="Tìm địa điểm, món ăn, địa chỉ..." value=""><a
-                href="/ha-noi/danh-sach-dia-diem-giao-tan-noi?q="><button type="button"
-                                                                          class="btn btn-search"><span class="fa fa-search"></span></button></a></div>
+              <div class="input-group"><input style="color: black;" type="text" id="q"
+                                              placeholder="Tìm địa điểm, món ăn, địa chỉ..." value="" [(ngModel)]="nameSearch"><a
+               ><button type="button"
+                                                                          class="btn btn-search"(click)="searchMerchantByName()"><span class="fa fa-search" ></span></button></a></div>
             </div>
             <div class="category-list-filter"><a routerLink="list-merchant"><span
               class="category-item ">All</span></a><a
