done order user

--- a/src/app/cart/cart-user/cart-user.component.html
+++ b/src/app/cart/cart-user/cart-user.component.html
@@ -294,7 +294,7 @@
               </li>
             </ul>
 
-            <button type="button" class="btn btn-primary btn-lg btn-block">
+            <button type="button" class="btn btn-primary btn-lg btn-block" (click)="checkout()">
               Đặt hàng
             </button>
           </div>
