--- a/src/app/merchant/merchant-order-list/merchant-order-list.component.html
+++ b/src/app/merchant/merchant-order-list/merchant-order-list.component.html
@@ -1,1 +1,59 @@
-<p>merchant-order-list works!</p>
+<main class="container-fluid m-md-5">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center border-bottom">
+    <h1 class="h2">Quản lý đơn hàng</h1>
+  </div>
+
+  <div class="container card shadow d-flex justify-content-center mt-5">
+    <!-- nav options -->
+    <ul class="nav nav-pills mb-3 shadow-sm" id="pills-tab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link link fw-bold"  id="pills-home-tab" data-toggle="pill" routerLink="pending" role="tab"  routerLinkActive="selected">Chờ duyệt</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link link fw-bold" id="pills-profile-tab" data-toggle="pill" routerLink="receive" role="tab"  routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}">Đã nhận đơn</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link link fw-bold" id="pills-contact-tab" data-toggle="pill" routerLink="send" role="tab"  routerLinkActive="selected">Đang chuyển đi</a>
+      </li>
+    </ul>
+
+    <!-- content -->
+    <div *ngIf="url==='/merchant/merchant-order'; then thenBlock else elseBlock"></div>
+    <ng-template #thenBlock class="table-responsive">
+      <table class="table table-striped table-sm">
+        <thead>
+        <tr>
+          <th scope="col">id</th>
+          <th scope="col">Ảnh</th>
+          <th scope="col">Tên </th>
+          <th scope="col">Điện thoại</th>
+          <th scope="col">Địa chỉ</th>
+          <th scope="col">Thời gian</th>
+          <!--        <th scope="col">CloseTime</th>-->
+          <th scope="col" colspan="2">Hành động</th>
+        </tr>
+        </thead>
+        <tbody>
+<!--        <tr *ngFor="let merchant of merchants">-->
+<!--          <td>{{merchant.id}}</td>-->
+<!--          <td><img src="{{merchant.avatar}}" alt="" style="height: 40px;-->
+<!--    width: 40px;-->
+<!--    border-radius: 50%;"></td>-->
+<!--          <td class="merchant-item">{{merchant.name}}</td>-->
+<!--          <td class="merchant-item">{{merchant.phone}}</td>-->
+<!--          <td class="merchant-item">{{merchant.address}}</td>-->
+<!--          <td class="merchant-item" size="50px">Mở:{{merchant.openTime}}  Đóng:{{merchant.closeTime}}</td>-->
+<!--          &lt;!&ndash;      <td class="merchant-item">{{merchant.closeTime}}</td>&ndash;&gt;-->
+<!--          <td class="action-icon"><a (click)="blockMerchant(merchant.id,merchant)"><i class="fa-regular fas fa-lock"></i></a></td>-->
+<!--        </tr>-->
+
+        </tbody>
+      </table>
+    </ng-template>
+    <ng-template #elseBlock>
+      <router-outlet ></router-outlet>
+    </ng-template>
+  </div>
+</main>
+
+
