--- a/src/app/admin/user-list-active/user-list-active.component.html
+++ b/src/app/admin/user-list-active/user-list-active.component.html
@@ -1,7 +1,7 @@
 <div class="table-responsive container">
   <table class="table table-striped table-sm">
     <thead>
-    <tr>
+    <tr style="text-align: center">
       <th scope="col">Stt</th>
       <th scope="col">Ảnh</th>
       <th scope="col">Tên</th>
