--- a/src/app/homepage/user-info/user-info.component.html
+++ b/src/app/homepage/user-info/user-info.component.html
@@ -282,11 +282,10 @@
                     </svg>
                   </i>
                     <div class=" width-info">
-                      <div class="title">Mật khẩu đăng nhập</div>
+                      <div class="title">Đổi mật khẩu</div>
                     </div>
                     <div class="info">
-                      <input class="info-input subtitle" [disabled]="disabeled" [(ngModel)]="account.password"
-                             value="{{account.password}}">
+                      <a class="info-input subtitle btn btn-dark" (click)="setLocalStorage()">Nhận otp xác thực và đổi mật khẩu</a>
                     </div>
                   </div>
                 </div>
