--- a/src/app/cart/cart-user/cart-user.component.css
+++ b/src/app/cart/cart-user/cart-user.component.css
@@ -293,3 +293,12 @@
   color: #0288d1
 }
 /*footer*/
+
+.btn-order{
+  border: 1px solid #ddd;
+  border-radius: 10px;
+}
+.btn-order:hover{
+  background-color: white;
+}
+
