--- a/src/app/cart/cart-user/cart-user.component.html
+++ b/src/app/cart/cart-user/cart-user.component.html
@@ -245,12 +245,46 @@
 
           </div>
         </div>
+
+
         <div class="card mb-4">
           <div class="card-body">
-            <p><strong>Expected shipping delivery</strong></p>
-            <p class="mb-0">12.10.2020 - 14.10.2020</p>
+            <p><strong>Lịch sử mua hàng</strong></p>
+
+            <div class="table-responsive container">
+              <table class="table table-striped table-sm">
+                <thead>
+                <tr>
+                  <th scope="col">id</th>
+                  <th scope="col">Ảnh</th>
+                  <th scope="col">Người đặt </th>
+                  <th scope="col">Tổng tiền</th>
+                  <th scope="col">Thời gian đặt</th>
+                  <th scope="col" >Trạng thái</th>
+                  <th scope="col" colspan="2">Hành động</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let order of orders">
+                  <td>{{order.id}}</td>
+                  <td><img src="{{order.appUser.avatar}}" alt="" style="height: 40px;
+        width: 40px;
+        border-radius: 50%;"></td>
+                  <td class="merchant-item">{{order.appUser.name}}</td>
+                  <td class="merchant-item">{{order.totalPrice}}</td>
+                  <td class="merchant-item">{{order.orderdate}}</td>
+                  <td class="merchant-item" size="50px">{{order.status}} </td>
+                  <td class="merchant-item" size="50px"><button class="btn-order" (click)="receiveOrderStatus(order, order.id)">Nhận hàng</button></td>
+                  <td class="merchant-item" size="50px"><button class="btn-order" (click)="deleteOrder(order.id)"><i class="fa-solid fa-trash"></i></button></td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+
           </div>
         </div>
+
+
         <div class="card mb-4 mb-lg-0">
           <div class="card-body">
             <p><strong>We accept</strong></p>
@@ -269,39 +303,56 @@
       <div class="col-md-4">
         <div class="card mb-4">
           <div class="card-header py-3">
-            <h5 class="mb-0">Bảng tóm tắt</h5>
+            <h5 class="mb-0">Hóa đơn</h5>
           </div>
           <div class="card-body">
-            <ul class="list-group list-group-flush">
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
-                Sản phẩm
-                <span>{{totalPrice}} đ</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                Vận chuyển
-                <span>ShopbeaShip</span>
-              </li>
-              <li
-                class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
-                <div>
-                  <strong>Tổng tiền</strong>
-                  <strong>
-                    <p class="mb-0">(đã thêm VAT)</p>
-                  </strong>
-                </div>
-                <span><strong>{{totalPrice}} đ</strong></span>
-              </li>
-            </ul>
 
-            <button type="button" class="btn btn-primary btn-lg btn-block" (click)="checkout()">
+
+            <div class="table-responsive container">
+              <div *ngIf="messagecart === 'khong co du lieu'; then thenBlockBill else elseBlockBill"></div>
+              <ng-template #thenBlockBill>
+                <table class="table table-striped table-sm">
+                  <thead>
+                  <tr>
+                    <th scope="col">Tên </th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Đơn giá</th>
+                  </tr>
+                  </thead>
+                </table>
+              </ng-template>
+              <ng-template #elseBlockBill>
+                <table class="table table-striped table-sm">
+                  <thead>
+                  <tr>
+                    <th scope="col">Tên </th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Đơn giá</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let cart of carts">
+                    <td class="merchant-item">{{cart.product.name}}</td>
+                    <td class="merchant-item">{{cart.quantity}}</td>
+                    <td class="merchant-item">{{cart.price}} đ</td>
+                  </tr>
+                  <tr>
+                    <th scope="col" colspan="2">Tổng tiền </th>
+                    <th scope="col" >{{totalPrice}} đ</th>
+                  </tr>
+                  </tbody>
+                </table>
+              </ng-template>
+
+            </div>
+            <button type="button" class="btn btn-primary btn-lg btn-block" style="margin-left: 260px" (click)="checkout()">
               Đặt hàng
             </button>
+            </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 </section>
 
 
