--- a/src/app/merchant/merchant-order-pending/merchant-order-pending.component.html
+++ b/src/app/merchant/merchant-order-pending/merchant-order-pending.component.html
@@ -8,7 +8,7 @@
       <th scope="col">Điện thoại</th>
       <th scope="col">Địa chỉ</th>
       <th scope="col">Thời gian</th>
-      <th scope="col" >Hành động</th>
+      <th scope="col" >Xem chi tiết</th>
     </tr>
     </thead>
     <tbody>
