--- a/src/app/merchant/merchant-order-send/merchant-order-send.component.html
+++ b/src/app/merchant/merchant-order-send/merchant-order-send.component.html
@@ -9,7 +9,8 @@
       <th scope="col">Địa chỉ</th>
       <th scope="col">Thời gian</th>
       <!--        <th scope="col">CloseTime</th>-->
-      <th scope="col" colspan="2">Trạng thái</th>
+      <th scope="col">Trạng thái</th>
+      <th scope="col">Xem chi tiết</th>
     </tr>
     </thead>
     <tbody>
@@ -23,6 +24,8 @@
       <td class="merchant-item">{{order.appUser.address}}</td>
       <td class="merchant-item" size="50px">{{order.orderdate}} </td>
       <td class="merchant-item" size="50px">{{order.status}} </td>
+      <td class="action-icon show-detail"><a [routerLink]="['/merchant/detail',order.id]"><i class="fa-solid fa-eye fa-solid-icon"></i></a></td>
+
     </tr>
 
     </tbody>
