--- a/src/app/cart/cart-user/cart-user.component.html
+++ b/src/app/cart/cart-user/cart-user.component.html
@@ -214,26 +214,18 @@
                   <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                     <!-- Quantity -->
                     <div class="d-flex mb-4" style="max-width: 300px">
-                      <button class="btn btn-primary px-3 me-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepDown()" (click)="decress(product.quantity)">
-                        <i class="fas fa-minus"></i>
-                      </button>
 
                       <div class="form-outline">
                         <label class="form-label" for="form1">Số lượng</label>
                         <input id="form1" min="0" name="quantity" [(ngModel)]="product.quantity" value="{{product.quantity}}" type="number" class="form-control" />
 
                       </div>
-
-                      <button class="btn btn-primary px-3 ms-2"
-                              onclick="this.parentNode.querySelector('input[type=number]').stepUp()" >
-                        <i class="fas fa-plus"></i>
-                      </button>
                     </div>
                     <!-- Quantity -->
 
                     <!-- Price -->
                     <p class="text-start text-md-center">
+                      <strong>Giá tiền: </strong>
                       <strong>{{product.totalPrice }} đ</strong>
                     </p>
                     <!-- Price -->
@@ -247,7 +239,7 @@
         </div>
 
 
-        <div class="card mb-4">
+        <div class="card mb-4" style="width: 1300px;">
           <div class="card-body">
             <p><strong>Lịch sử mua hàng</strong></p>
 
@@ -255,26 +247,25 @@
               <table class="table table-striped table-sm">
                 <thead>
                 <tr>
-                  <th scope="col">id</th>
                   <th scope="col">Ảnh</th>
                   <th scope="col">Người đặt </th>
                   <th scope="col">Tổng tiền</th>
-                  <th scope="col">Thời gian đặt</th>
+                  <th scope="col">Thời gian</th>
                   <th scope="col" >Trạng thái</th>
                   <th scope="col" colspan="2">Hành động</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr *ngFor="let order of orders">
-                  <td>{{order.id}}</td>
                   <td><img src="{{order.appUser.avatar}}" alt="" style="height: 40px;
         width: 40px;
         border-radius: 50%;"></td>
                   <td class="merchant-item">{{order.appUser.name}}</td>
-                  <td class="merchant-item">{{order.totalPrice}}</td>
+                  <td class="merchant-item">{{order.totalPrice}} đ</td>
                   <td class="merchant-item">{{order.orderdate}}</td>
                   <td class="merchant-item" size="50px">{{order.status}} </td>
                   <td class="merchant-item" size="50px"><button class="btn-order" (click)="receiveOrderStatus(order, order.id)">Nhận hàng</button></td>
+                  <td class="merchant-item" size="50px"><button class="btn-order" (click)="refuseOrderStatus(order, order.id)">Từ chối</button></td>
                   <td class="merchant-item" size="50px"><button class="btn-order" (click)="deleteOrder(order.id)"><i class="fa-solid fa-trash"></i></button></td>
                 </tr>
                 </tbody>
@@ -282,10 +273,8 @@
             </div>
 
           </div>
-        </div>
 
 
-        <div class="card mb-4 mb-lg-0">
           <div class="card-body">
             <p><strong>We accept</strong></p>
             <img class="me-2" width="45px"
@@ -298,7 +287,9 @@
                  src="https://mdbcdn.b-cdn.net/wp-content/plugins/woocommerce-gateway-stripe/assets/images/mastercard.svg"
                  alt="Mastercard" />
           </div>
+
         </div>
+
       </div>
       <div class="col-md-4">
         <div class="card mb-4">
@@ -339,6 +330,10 @@
                   <tr>
                     <th scope="col" colspan="2">Tổng tiền </th>
                     <th scope="col" >{{totalPrice}} đ</th>
+                  </tr>
+                  <tr>
+                    <th scope="col">Ghi chú </th>
+                    <th scope="col" colspan="2"><input type="text" placeholder="Ghi chú"></th>
                   </tr>
                   </tbody>
                 </table>
