--- a/src/app/merchant/merchant-order-detail/merchant-order-detail.component.html
+++ b/src/app/merchant/merchant-order-detail/merchant-order-detail.component.html
@@ -1,4 +1,5 @@
 <div class="table-responsive container">
+  <strong>Chi tiết đơn hàng</strong>
   <table class="table table-striped table-sm">
     <thead>
     <tr>
@@ -21,7 +22,11 @@
     </tr>
     </tbody>
   </table>
- <button class="btn-primary btn-orderDetail" (click)="receiveOrderStatus(orderDetails[0].order)">Nhận đơn</button>
- <button class="btn-primary btn-orderDetail" (click)="refuseOrderStatus(orderDetails[0].order)">Từ chối</button>
+  <div *ngIf="status==='Đang chờ duyệt'; then thenBlockBtn"></div>
+  <ng-template #thenBlockBtn>
+    <button class="btn-primary btn-orderDetail" (click)="receiveOrderStatus(orderDetails[0].order)">Nhận đơn</button>
+    <button class="btn-primary btn-orderDetail" (click)="refuseOrderStatus(orderDetails[0].order)">Từ chối</button>
+  </ng-template>
+
 </div>
 
