--- a/src/app/admin/user-list/user-list.component.css
+++ b/src/app/admin/user-list/user-list.component.css
@@ -169,7 +169,7 @@ td{
   /*border-bottom: 2px solid #ee4d2d;*/
   padding-bottom: 10px;
   /*transform: translateX(20px);*/
-  background-color: #ee4d2d;
+  background-color: #f16464;
   color: white;
 }
 
