--- a/src/app/cart/cart-user/cart-user.component.css
+++ b/src/app/cart/cart-user/cart-user.component.css
@@ -301,4 +301,9 @@
 .btn-order:hover{
   background-color: white;
 }
-
+.note{
+  width: 100%;
+  padding-left: 15px;
+  border-radius: 5px;
+  border: none;
+}
