--- a/src/app/merchant/merchant-order-pending/merchant-order-pending.component.html
+++ b/src/app/merchant/merchant-order-pending/merchant-order-pending.component.html
@@ -8,6 +8,7 @@
       <th scope="col">Điện thoại</th>
       <th scope="col">Địa chỉ</th>
       <th scope="col">Thời gian</th>
+      <th scope="col">Ghi chú</th>
       <th scope="col" >Xem chi tiết</th>
     </tr>
     </thead>
@@ -21,6 +22,7 @@
           <td class="merchant-item">{{order.appUser.phone}}</td>
           <td class="merchant-item">{{order.appUser.address}}</td>
           <td class="merchant-item" size="50px">{{order.orderdate}} </td>
+          <td class="merchant-item" size="50px">{{order.note}} </td>
           <td class="action-icon show-detail"><a [routerLink]="['/merchant/detail',order.id]"><i class="fa-solid fa-eye fa-solid-icon"></i></a></td>
         </tr>
     </tbody>
